Fix #215 - schema view overlap

--- a/explorer/static/explorer/explorer.css
+++ b/explorer/static/explorer/explorer.css
@@ -101,3 +101,7 @@ span.sort {
 .pvtAxisContainer, .pvtVals {
     border-color: #ddd;
 }
+
+#schema_frame {
+    width: 100%;
+}
